<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/eduko_dialog_round"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <ImageView
        android:id="@+id/ivTareasCerrar"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="end"
        android:src="@drawable/eduko_reconocimientos_cerrar" />

    <LinearLayout
        android:id="@+id/llTareasXRealizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCambiarTareas"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_72sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/eduko_tareas_xrealizar_dialog" />

        <TextView
            android:id="@+id/tvTexto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/tvEstadoTareas"
            android:textAlignment="center"
            android:textColor="#005163"
            android:textSize="@dimen/_24sdpt" />

        <TextView
            android:id="@+id/tvTexto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/tvEstadoTareas1"
            android:textAlignment="center"
            android:textColor="#005163"
            android:textSize="@dimen/_24sdpt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/tvNO"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#959595"
                android:textSize="@dimen/_18sdpt" />

            <TextView
                android:id="@+id/tvSi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/tvSI"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#019DC0"
                android:textSize="@dimen/_18sdpt" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:scaleType="fitXY"
        android:visibility="gone">

    </RelativeLayout>

</FrameLayout>