<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eduko_dialog_round"
    android:padding="@dimen/_16sdp">

    <ImageView
        android:id="@+id/ivCategoriasCerrar"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/_24sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/eduko_reconocimientos_cerrar"
        android:layout_marginEnd="@dimen/_24sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_72sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/eduko_servicios_categorias" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvServiciosCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/tvCategoria"
                android:textColor="#005163"
                android:textSize="@dimen/_24sdpt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategoriasServicios"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/tvNoDatosCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/tvNoDatos"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdpt"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvAceptarServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:gravity="end"
            android:text="@string/btnAceptar"
            android:textAllCaps="true"
            android:textColor="#019DC0"
            android:textSize="@dimen/_18sdpt"
            android:layout_marginEnd="@dimen/_25sdp" />

    </LinearLayout>

</FrameLayout>