<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.idoogroup.edalumno.Fragments.EventosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/eduko_eventos_activo" />

        <TextView
            android:id="@+id/tvEventos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/tvEventos"
            android:textAllCaps="true"
            android:textColor="#FA9919"
            android:textSize="@dimen/_18sdpt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/eduko_back_activo"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEventosActivos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/eduko_btn_activo"
                android:text="@string/tvEventosActivos"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_14sdpt" />

            <TextView
                android:id="@+id/tvEventosInactivos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.25"
                android:background="@drawable/eduko_btn_inactivo"
                android:text="@string/tvEventosInactivos"
                android:textAllCaps="true"
                android:textColor="#F1460C"
                android:textSize="@dimen/_14sdpt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlEventos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                app:tabGravity="fill"
                app:tabIndicatorColor="@android:color/transparent"
                app:tabMode="fixed" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vpEventos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
