<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.idoogroup.edalumno.Fragments.TareasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/tvTareas"
            android:textAllCaps="true"
            android:textColor="#02B2D9"
            android:textSize="@dimen/_18sdpt" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAsignaturas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTodas"
                android:textAllCaps="false"
                android:textColor="#13C5ED"
                android:textSize="@dimen/_18sdpt" />

            <ImageView
                android:id="@+id/ivFlechaAsignatura"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:layout_marginLeft="@dimen/_8sdp"
                android:src="@drawable/eduko_asignatura_flecha_abajo"
                android:layout_marginStart="@dimen/_8sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_22sdp"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlTareas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                app:tabGravity="fill"
                app:tabIndicatorColor="@android:color/transparent"
                app:tabMode="fixed" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vpTareas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85"
                android:background="@drawable/back_tab_tareas" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
